parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT
    compass
    sonar

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> empty NEWLINE
Rule 5     statement -> declaration NEWLINE
Rule 6     statement -> assignment NEWLINE
Rule 7     statement -> conversion NEWLINE
Rule 8     statement -> CHECK NEWLINE
Rule 9     statement -> UNTIL NEWLINE
Rule 10    statement -> go NEWLINE
Rule 11    statement -> rr NEWLINE
Rule 12    statement -> rl NEWLINE
Rule 13    statement -> function NEWLINE
Rule 14    statement -> function_call NEWLINE
Rule 15    empty -> <empty>
Rule 16    declaration -> type variants
Rule 17    declaration -> type variants LASIGNMENT DECIMAL
Rule 18    declaration -> field type type variants
Rule 19    declaration -> field type type variants LASIGNMENT DECIMAL
Rule 20    variants -> variants variant
Rule 21    variants -> variant
Rule 22    variant -> NAME
Rule 23    indices -> LSQBRACKET expression expression RSQBRACKET
Rule 24    type -> tiny
Rule 25    type -> small
Rule 26    type -> normal
Rule 27    type -> big
Rule 28    expression -> math_expression
Rule 29    expression -> decimal_const
Rule 30    expression -> variant
Rule 31    expression -> expression RASIGNMENT variant
Rule 32    expression -> variant LASIGNMENT expression
Rule 33    expression -> function_call
Rule 34    math_expression -> expression PLUS expression
Rule 35    math_expression -> LRNDBRACKET expression PLUS expression RRNDBRACKET
Rule 36    math_expression -> expression MINUS expression
Rule 37    math_expression -> LRNDBRACKET expression MINUS expression RRNDBRACKET
Rule 38    math_expression -> expression MULT expression
Rule 39    math_expression -> expression DIV expression
Rule 40    math_expression -> expression MORE expression
Rule 41    math_expression -> expression LESS expression
Rule 42    math_expression -> expression MOREEQ expression
Rule 43    math_expression -> expression LESSEQ expression
Rule 44    decimal_const -> DECIMAL
Rule 45    assignment -> variant LASIGNMENT expression
Rule 46    assignment -> expression RASIGNMENT variant
Rule 47    assignment -> variant indices LASIGNMENT expression
Rule 48    assignment -> expression RASIGNMENT variant indices
Rule 49    assignment -> variant LASIGNMENT expression RASIGNMENT variant
Rule 50    assignment -> expression RASIGNMENT variant LASIGNMENT expression
Rule 51    conversion -> MINUS variant
Rule 52    conversion -> PLUS variant
Rule 53    UNTIL -> until math_expression do NEWLINE statements
Rule 54    CHECK -> check math_expression do NEWLINE statements
Rule 55    function -> type NAME LSQBRACKET parameters RSQBRACKET begin NEWLINE func_statements end
Rule 56    func_statements -> func_statements func_statement
Rule 57    func_statements -> func_statement
Rule 58    func_statement -> empty NEWLINE
Rule 59    func_statement -> declaration NEWLINE
Rule 60    func_statement -> assignment NEWLINE
Rule 61    func_statement -> conversion NEWLINE
Rule 62    func_statement -> CHECK NEWLINE
Rule 63    func_statement -> UNTIL NEWLINE
Rule 64    func_statement -> go NEWLINE
Rule 65    func_statement -> rr NEWLINE
Rule 66    func_statement -> rl NEWLINE
Rule 67    func_statement -> function_call NEWLINE
Rule 68    func_statement -> RETURN NEWLINE
Rule 69    parameters -> parameters COMMA parameter
Rule 70    parameters -> parameter
Rule 71    parameter -> type NAME
Rule 72    function_call -> NAME LRNDBRACKET variants RRNDBRACKET
Rule 73    function_call -> NAME LRNDBRACKET RRNDBRACKET
Rule 74    RETURN -> return expression
Rule 75    declaration -> type error
Rule 76    declaration -> type variants LASIGNMENT error
Rule 77    declaration -> field type type error
Rule 78    declaration -> field type type variants LASIGNMENT error
Rule 79    declaration -> declaration error
Rule 80    indices -> LSQBRACKET error RSQBRACKET
Rule 81    indices -> LSQBRACKET error expression RSQBRACKET
Rule 82    indices -> LSQBRACKET expression error RSQBRACKET
Rule 83    indices -> LSQBRACKET error error RSQBRACKET
Rule 84    indices -> indices error
Rule 85    assignment -> variant LASIGNMENT error
Rule 86    assignment -> error LASIGNMENT expression
Rule 87    assignment -> error RASIGNMENT variant
Rule 88    assignment -> expression RASIGNMENT error
Rule 89    assignment -> error indices LASIGNMENT expression
Rule 90    assignment -> variant indices LASIGNMENT error
Rule 91    assignment -> error RASIGNMENT variant indices
Rule 92    assignment -> expression RASIGNMENT error indices
Rule 93    assignment -> error LASIGNMENT expression RASIGNMENT variant
Rule 94    assignment -> variant LASIGNMENT error RASIGNMENT variant
Rule 95    assignment -> variant LASIGNMENT expression RASIGNMENT error
Rule 96    assignment -> error LASIGNMENT error RASIGNMENT variant
Rule 97    assignment -> variant LASIGNMENT error RASIGNMENT error
Rule 98    assignment -> error LASIGNMENT expression RASIGNMENT error
Rule 99    assignment -> error RASIGNMENT variant LASIGNMENT expression
Rule 100   assignment -> expression RASIGNMENT error LASIGNMENT expression
Rule 101   assignment -> expression RASIGNMENT variant LASIGNMENT error
Rule 102   assignment -> error RASIGNMENT error LASIGNMENT expression
Rule 103   assignment -> expression RASIGNMENT error LASIGNMENT error
Rule 104   assignment -> error RASIGNMENT variant LASIGNMENT error
Rule 105   conversion -> MINUS error
Rule 106   conversion -> PLUS error
Rule 107   conversion -> conversion error
Rule 108   UNTIL -> until error do NEWLINE statements
Rule 109   UNTIL -> UNTIL error
Rule 110   CHECK -> check error do NEWLINE statements
Rule 111   CHECK -> CHECK error
Rule 112   function -> type error LSQBRACKET parameters RSQBRACKET begin NEWLINE func_statements end
Rule 113   function -> type NAME LSQBRACKET error RSQBRACKET begin NEWLINE func_statements end
Rule 114   function -> type NAME LSQBRACKET parameters RSQBRACKET error NEWLINE func_statements end
Rule 115   function -> type NAME LSQBRACKET parameters RSQBRACKET begin NEWLINE func_statements error
Rule 116   function -> type error LSQBRACKET error RSQBRACKET begin NEWLINE func_statements end
Rule 117   function -> type NAME LSQBRACKET error RSQBRACKET error NEWLINE func_statements end
Rule 118   function -> type NAME LSQBRACKET parameters RSQBRACKET error NEWLINE func_statements error
Rule 119   function -> type error LSQBRACKET parameters RSQBRACKET begin NEWLINE func_statements error
Rule 120   function -> type error LSQBRACKET parameters RSQBRACKET error NEWLINE func_statements end
Rule 121   function -> type NAME LSQBRACKET error RSQBRACKET begin NEWLINE func_statements error
Rule 122   function -> type error LSQBRACKET error RSQBRACKET error NEWLINE func_statements end
Rule 123   function -> type NAME LSQBRACKET error RSQBRACKET error NEWLINE func_statements error
Rule 124   function -> type error LSQBRACKET parameters RSQBRACKET error NEWLINE func_statements error
Rule 125   function -> type error LSQBRACKET error RSQBRACKET begin NEWLINE func_statements error
Rule 126   function -> function error
Rule 127   RETURN -> return error
Rule 128   RETURN -> RETURN error

Terminals, with rules where they appear

COMMA                : 69
DECIMAL              : 17 19 44
DIV                  : 39
DOT                  : 
LASIGNMENT           : 17 19 32 45 47 49 50 76 78 85 86 89 90 93 94 95 96 97 98 99 100 101 102 103 104
LESS                 : 41
LESSEQ               : 43
LRNDBRACKET          : 35 37 72 73
LSQBRACKET           : 23 55 80 81 82 83 112 113 114 115 116 117 118 119 120 121 122 123 124 125
MINUS                : 36 37 51 105
MORE                 : 40
MOREEQ               : 42
MULT                 : 38
NAME                 : 22 55 71 72 73 113 114 115 117 118 121 123
NEWLINE              : 4 5 6 7 8 9 10 11 12 13 14 53 54 55 58 59 60 61 62 63 64 65 66 67 68 108 110 112 113 114 115 116 117 118 119 120 121 122 123 124 125
PLUS                 : 34 35 52 106
RASIGNMENT           : 31 46 48 49 50 87 88 91 92 93 94 95 96 97 98 99 100 101 102 103 104
RRNDBRACKET          : 35 37 72 73
RSQBRACKET           : 23 55 80 81 82 83 112 113 114 115 116 117 118 119 120 121 122 123 124 125
begin                : 55 112 113 115 116 119 121 125
big                  : 27
check                : 54 110
compass              : 
do                   : 53 54 108 110
end                  : 55 112 113 114 116 117 120 122
error                : 75 76 77 78 79 80 81 82 83 83 84 85 86 87 88 89 90 91 92 93 94 95 96 96 97 97 98 98 99 100 101 102 102 103 103 104 104 105 106 107 108 109 110 111 112 113 114 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 122 123 123 123 124 124 124 125 125 125 126 127 128
field                : 18 19 77 78
go                   : 10 64
normal               : 26
return               : 74 127
rl                   : 12 66
rr                   : 11 65
small                : 25
sonar                : 
tiny                 : 24
until                : 53 108

Nonterminals, with rules where they appear

CHECK                : 8 62 111
RETURN               : 68 128
UNTIL                : 9 63 109
assignment           : 6 60
conversion           : 7 61 107
decimal_const        : 29
declaration          : 5 59 79
empty                : 4 58
expression           : 23 23 31 32 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 45 46 47 48 49 50 50 74 81 82 86 88 89 92 93 95 98 99 100 100 101 102 103
func_statement       : 56 57
func_statements      : 55 56 112 113 114 115 116 117 118 119 120 121 122 123 124 125
function             : 13 126
function_call        : 14 33 67
indices              : 47 48 84 89 90 91 92
math_expression      : 28 53 54
parameter            : 69 70
parameters           : 55 69 112 114 115 118 119 120 124
program              : 0
statement            : 2 3
statements           : 1 2 53 54 108 110
type                 : 16 17 18 18 19 19 55 71 75 76 77 77 78 78 112 113 114 115 116 117 118 119 120 121 122 123 124 125
variant              : 20 21 30 31 32 45 46 47 48 49 49 50 51 52 85 87 90 91 93 94 94 95 96 97 99 101 104
variants             : 16 17 18 19 20 72 76 78

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . empty NEWLINE
    (5) statement -> . declaration NEWLINE
    (6) statement -> . assignment NEWLINE
    (7) statement -> . conversion NEWLINE
    (8) statement -> . CHECK NEWLINE
    (9) statement -> . UNTIL NEWLINE
    (10) statement -> . go NEWLINE
    (11) statement -> . rr NEWLINE
    (12) statement -> . rl NEWLINE
    (13) statement -> . function NEWLINE
    (14) statement -> . function_call NEWLINE
    (15) empty -> .
    (16) declaration -> . type variants
    (17) declaration -> . type variants LASIGNMENT DECIMAL
    (18) declaration -> . field type type variants
    (19) declaration -> . field type type variants LASIGNMENT DECIMAL
    (75) declaration -> . type error
    (76) declaration -> . type variants LASIGNMENT error
    (77) declaration -> . field type type error
    (78) declaration -> . field type type variants LASIGNMENT error
    (79) declaration -> . declaration error
    (45) assignment -> . variant LASIGNMENT expression
    (46) assignment -> . expression RASIGNMENT variant
    (47) assignment -> . variant indices LASIGNMENT expression
    (48) assignment -> . expression RASIGNMENT variant indices
    (49) assignment -> . variant LASIGNMENT expression RASIGNMENT variant
    (50) assignment -> . expression RASIGNMENT variant LASIGNMENT expression
    (85) assignment -> . variant LASIGNMENT error
    (86) assignment -> . error LASIGNMENT expression
    (87) assignment -> . error RASIGNMENT variant
    (88) assignment -> . expression RASIGNMENT error
    (89) assignment -> . error indices LASIGNMENT expression
    (90) assignment -> . variant indices LASIGNMENT error
    (91) assignment -> . error RASIGNMENT variant indices
    (92) assignment -> . expression RASIGNMENT error indices
    (93) assignment -> . error LASIGNMENT expression RASIGNMENT variant
    (94) assignment -> . variant LASIGNMENT error RASIGNMENT variant
    (95) assignment -> . variant LASIGNMENT expression RASIGNMENT error
    (96) assignment -> . error LASIGNMENT error RASIGNMENT variant
    (97) assignment -> . variant LASIGNMENT error RASIGNMENT error
    (98) assignment -> . error LASIGNMENT expression RASIGNMENT error
    (99) assignment -> . error RASIGNMENT variant LASIGNMENT expression
    (100) assignment -> . expression RASIGNMENT error LASIGNMENT expression
    (101) assignment -> . expression RASIGNMENT variant LASIGNMENT error
    (102) assignment -> . error RASIGNMENT error LASIGNMENT expression
    (103) assignment -> . expression RASIGNMENT error LASIGNMENT error
    (104) assignment -> . error RASIGNMENT variant LASIGNMENT error
    (51) conversion -> . MINUS variant
    (52) conversion -> . PLUS variant
    (105) conversion -> . MINUS error
    (106) conversion -> . PLUS error
    (107) conversion -> . conversion error
    (54) CHECK -> . check math_expression do NEWLINE statements
    (110) CHECK -> . check error do NEWLINE statements
    (111) CHECK -> . CHECK error
    (53) UNTIL -> . until math_expression do NEWLINE statements
    (108) UNTIL -> . until error do NEWLINE statements
    (109) UNTIL -> . UNTIL error
    (55) function -> . type NAME LSQBRACKET parameters RSQBRACKET begin NEWLINE func_statements end
    (112) function -> . type error LSQBRACKET parameters RSQBRACKET begin NEWLINE func_statements end
    (113) function -> . type NAME LSQBRACKET error RSQBRACKET begin NEWLINE func_statements end
    (114) function -> . type NAME LSQBRACKET parameters RSQBRACKET error NEWLINE func_statements end
    (115) function -> . type NAME LSQBRACKET parameters RSQBRACKET begin NEWLINE func_statements error
    (116) function -> . type error LSQBRACKET error RSQBRACKET begin NEWLINE func_statements end
    (117) function -> . type NAME LSQBRACKET error RSQBRACKET error NEWLINE func_statements end
    (118) function -> . type NAME LSQBRACKET parameters RSQBRACKET error NEWLINE func_statements error
    (119) function -> . type error LSQBRACKET parameters RSQBRACKET begin NEWLINE func_statements error
    (120) function -> . type error LSQBRACKET parameters RSQBRACKET error NEWLINE func_statements end
    (121) function -> . type NAME LSQBRACKET error RSQBRACKET begin NEWLINE func_statements error
    (122) function -> . type error LSQBRACKET error RSQBRACKET error NEWLINE func_statements end
    (123) function -> . type NAME LSQBRACKET error RSQBRACKET error NEWLINE func_statements error
    (124) function -> . type error LSQBRACKET parameters RSQBRACKET error NEWLINE func_statements error
    (125) function -> . type error LSQBRACKET error RSQBRACKET begin NEWLINE func_statements error
    (126) function -> . function error
    (72) function_call -> . NAME LRNDBRACKET variants RRNDBRACKET
    (73) function_call -> . NAME LRNDBRACKET RRNDBRACKET
    (24) type -> . tiny
    (25) type -> . small
    (26) type -> . normal
    (27) type -> . big
    (22) variant -> . NAME
    (28) expression -> . math_expression
    (29) expression -> . decimal_const
    (30) expression -> . variant
    (31) expression -> . expression RASIGNMENT variant
    (32) expression -> . variant LASIGNMENT expression
    (33) expression -> . function_call
    (34) math_expression -> . expression PLUS expression
    (35) math_expression -> . LRNDBRACKET expression PLUS expression RRNDBRACKET
    (36) math_expression -> . expression MINUS expression
    (37) math_expression -> . LRNDBRACKET expression MINUS expression RRNDBRACKET
    (38) math_expression -> . expression MULT expression
    (39) math_expression -> . expression DIV expression
    (40) math_expression -> . expression MORE expression
    (41) math_expression -> . expression LESS expression
    (42) math_expression -> . expression MOREEQ expression
    (43) math_expression -> . expression LESSEQ expression
    (44) decimal_const -> . DECIMAL

    go              shift and go to state 10
    rr              shift and go to state 11
    rl              shift and go to state 12
    NEWLINE         reduce using rule 15 (empty -> .)
    field           shift and go to state 17
    error           shift and go to state 18
    MINUS           shift and go to state 21
    PLUS            shift and go to state 22
    check           shift and go to state 23
    until           shift and go to state 25
    NAME            shift and go to state 26
    tiny            shift and go to state 28
    small           shift and go to state 29
    normal          shift and go to state 30
    big             shift and go to state 31
    LRNDBRACKET     shift and go to state 27
    DECIMAL         shift and go to state 16

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    empty                          shift and go to state 4
    declaration                    shift and go to state 5
    assignment                     shift and go to state 6
    conversion                     shift and go to state 7
    CHECK                          shift and go to state 8
    UNTIL                          shift and go to state 9
    function                       shift and go to state 13
    function_call                  shift and go to state 14
    type                           shift and go to state 15
    variant                        shift and go to state 19
    expression                     shift and go to state 20
    math_expression                shift and go to state 24
    decimal_const                  shift and go to state 32

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . empty NEWLINE
    (5) statement -> . declaration NEWLINE
    (6) statement -> . assignment NEWLINE
    (7) statement -> . conversion NEWLINE
    (8) statement -> . CHECK NEWLINE
    (9) statement -> . UNTIL NEWLINE
    (10) statement -> . go NEWLINE
    (11) statement -> . rr NEWLINE
    (12) statement -> . rl NEWLINE
    (13) statement -> . function NEWLINE
    (14) statement -> . function_call NEWLINE
    (15) empty -> .
    (16) declaration -> . type variants
    (17) declaration -> . type variants LASIGNMENT DECIMAL
    (18) declaration -> . field type type variants
    (19) declaration -> . field type type variants LASIGNMENT DECIMAL
    (75) declaration -> . type error
    (76) declaration -> . type variants LASIGNMENT error
    (77) declaration -> . field type type error
    (78) declaration -> . field type type variants LASIGNMENT error
    (79) declaration -> . declaration error
    (45) assignment -> . variant LASIGNMENT expression
    (46) assignment -> . expression RASIGNMENT variant
    (47) assignment -> . variant indices LASIGNMENT expression
    (48) assignment -> . expression RASIGNMENT variant indices
    (49) assignment -> . variant LASIGNMENT expression RASIGNMENT variant
    (50) assignment -> . expression RASIGNMENT variant LASIGNMENT expression
    (85) assignment -> . variant LASIGNMENT error
    (86) assignment -> . error LASIGNMENT expression
    (87) assignment -> . error RASIGNMENT variant
    (88) assignment -> . expression RASIGNMENT error
    (89) assignment -> . error indices LASIGNMENT expression
    (90) assignment -> . variant indices LASIGNMENT error
    (91) assignment -> . error RASIGNMENT variant indices
    (92) assignment -> . expression RASIGNMENT error indices
    (93) assignment -> . error LASIGNMENT expression RASIGNMENT variant
    (94) assignment -> . variant LASIGNMENT error RASIGNMENT variant
    (95) assignment -> . variant LASIGNMENT expression RASIGNMENT error
    (96) assignment -> . error LASIGNMENT error RASIGNMENT variant
    (97) assignment -> . variant LASIGNMENT error RASIGNMENT error
    (98) assignment -> . error LASIGNMENT expression RASIGNMENT error
    (99) assignment -> . error RASIGNMENT variant LASIGNMENT expression
    (100) assignment -> . expression RASIGNMENT error LASIGNMENT expression
    (101) assignment -> . expression RASIGNMENT variant LASIGNMENT error
    (102) assignment -> . error RASIGNMENT error LASIGNMENT expression
    (103) assignment -> . expression RASIGNMENT error LASIGNMENT error
    (104) assignment -> . error RASIGNMENT variant LASIGNMENT error
    (51) conversion -> . MINUS variant
    (52) conversion -> . PLUS variant
    (105) conversion -> . MINUS error
    (106) conversion -> . PLUS error
    (107) conversion -> . conversion error
    (54) CHECK -> . check math_expression do NEWLINE statements
    (110) CHECK -> . check error do NEWLINE statements
    (111) CHECK -> . CHECK error
    (53) UNTIL -> . until math_expression do NEWLINE statements
    (108) UNTIL -> . until error do NEWLINE statements
    (109) UNTIL -> . UNTIL error
    (55) function -> . type NAME LSQBRACKET parameters RSQBRACKET begin NEWLINE func_statements end
    (112) function -> . type error LSQBRACKET parameters RSQBRACKET begin NEWLINE func_statements end
    (113) function -> . type NAME LSQBRACKET error RSQBRACKET begin NEWLINE func_statements end
    (114) function -> . type NAME LSQBRACKET parameters RSQBRACKET error NEWLINE func_statements end
    (115) function -> . type NAME LSQBRACKET parameters RSQBRACKET begin NEWLINE func_statements error
    (116) function -> . type error LSQBRACKET error RSQBRACKET begin NEWLINE func_statements end
    (117) function -> . type NAME LSQBRACKET error RSQBRACKET error NEWLINE func_statements end
    (118) function -> . type NAME LSQBRACKET parameters RSQBRACKET error NEWLINE func_statements error
    (119) function -> . type error LSQBRACKET parameters RSQBRACKET begin NEWLINE func_statements error
    (120) function -> . type error LSQBRACKET parameters RSQBRACKET error NEWLINE func_statements end
    (121) function -> . type NAME LSQBRACKET error RSQBRACKET begin NEWLINE func_statements error
    (122) function -> . type error LSQBRACKET error RSQBRACKET error NEWLINE func_statements end
    (123) function -> . type NAME LSQBRACKET error RSQBRACKET error NEWLINE func_statements error
    (124) function -> . type error LSQBRACKET parameters RSQBRACKET error NEWLINE func_statements error
    (125) function -> . type error LSQBRACKET error RSQBRACKET begin NEWLINE func_statements error
    (126) function -> . function error
    (72) function_call -> . NAME LRNDBRACKET variants RRNDBRACKET
    (73) function_call -> . NAME LRNDBRACKET RRNDBRACKET
    (24) type -> . tiny
    (25) type -> . small
    (26) type -> . normal
    (27) type -> . big
    (22) variant -> . NAME
    (28) expression -> . math_expression
    (29) expression -> . decimal_const
    (30) expression -> . variant
    (31) expression -> . expression RASIGNMENT variant
    (32) expression -> . variant LASIGNMENT expression
    (33) expression -> . function_call
    (34) math_expression -> . expression PLUS expression
    (35) math_expression -> . LRNDBRACKET expression PLUS expression RRNDBRACKET
    (36) math_expression -> . expression MINUS expression
    (37) math_expression -> . LRNDBRACKET expression MINUS expression RRNDBRACKET
    (38) math_expression -> . expression MULT expression
    (39) math_expression -> . expression DIV expression
    (40) math_expression -> . expression MORE expression
    (41) math_expression -> . expression LESS expression
    (42) math_expression -> . expression MOREEQ expression
    (43) math_expression -> . expression LESSEQ expression
    (44) decimal_const -> . DECIMAL

    $end            reduce using rule 1 (program -> statements .)
    go              shift and go to state 10
    rr              shift and go to state 11
    rl              shift and go to state 12
    NEWLINE         reduce using rule 15 (empty -> .)
    field           shift and go to state 17
    error           shift and go to state 18
    MINUS           shift and go to state 21
    PLUS            shift and go to state 22
    check           shift and go to state 23
    until           shift and go to state 25
    NAME            shift and go to state 26
    tiny            shift and go to state 28
    small           shift and go to state 29
    normal          shift and go to state 30
    big             shift and go to state 31
    LRNDBRACKET     shift and go to state 27
    DECIMAL         shift and go to state 16

    statement                      shift and go to state 33
    empty                          shift and go to state 4
    declaration                    shift and go to state 5
    assignment                     shift and go to state 6
    conversion                     shift and go to state 7
    CHECK                          shift and go to state 8
    UNTIL                          shift and go to state 9
    function                       shift and go to state 13
    function_call                  shift and go to state 14
    type                           shift and go to state 15
    variant                        shift and go to state 19
    expression                     shift and go to state 20
    math_expression                shift and go to state 24
    decimal_const                  shift and go to state 32

state 3

    (3) statements -> statement .

    go              reduce using rule 3 (statements -> statement .)
    rr              reduce using rule 3 (statements -> statement .)
    rl              reduce using rule 3 (statements -> statement .)
    field           reduce using rule 3 (statements -> statement .)
    error           reduce using rule 3 (statements -> statement .)
    MINUS           reduce using rule 3 (statements -> statement .)
    PLUS            reduce using rule 3 (statements -> statement .)
    check           reduce using rule 3 (statements -> statement .)
    until           reduce using rule 3 (statements -> statement .)
    NAME            reduce using rule 3 (statements -> statement .)
    tiny            reduce using rule 3 (statements -> statement .)
    small           reduce using rule 3 (statements -> statement .)
    normal          reduce using rule 3 (statements -> statement .)
    big             reduce using rule 3 (statements -> statement .)
    LRNDBRACKET     reduce using rule 3 (statements -> statement .)
    DECIMAL         reduce using rule 3 (statements -> statement .)
    NEWLINE         reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> empty . NEWLINE

    NEWLINE         shift and go to state 34


state 5

    (5) statement -> declaration . NEWLINE
    (79) declaration -> declaration . error

    NEWLINE         shift and go to state 35
    error           shift and go to state 36


state 6

    (6) statement -> assignment . NEWLINE

    NEWLINE         shift and go to state 37


state 7

    (7) statement -> conversion . NEWLINE
    (107) conversion -> conversion . error

    NEWLINE         shift and go to state 38
    error           shift and go to state 39


state 8

    (8) statement -> CHECK . NEWLINE
    (111) CHECK -> CHECK . error

    NEWLINE         shift and go to state 40
    error           shift and go to state 41


state 9

    (9) statement -> UNTIL . NEWLINE
    (109) UNTIL -> UNTIL . error

    NEWLINE         shift and go to state 42
    error           shift and go to state 43


state 10

    (10) statement -> go . NEWLINE

    NEWLINE         shift and go to state 44


state 11

    (11) statement -> rr . NEWLINE

    NEWLINE         shift and go to state 45


state 12

    (12) statement -> rl . NEWLINE

    NEWLINE         shift and go to state 46


state 13

    (13) statement -> function . NEWLINE
    (126) function -> function . error

    NEWLINE         shift and go to state 47
    error           shift and go to state 48


state 14

    (14) statement -> function_call . NEWLINE
    (33) expression -> function_call .

    NEWLINE         shift and go to state 49
    RASIGNMENT      reduce using rule 33 (expression -> function_call .)
    PLUS            reduce using rule 33 (expression -> function_call .)
    MINUS           reduce using rule 33 (expression -> function_call .)
    MULT            reduce using rule 33 (expression -> function_call .)
    DIV             reduce using rule 33 (expression -> function_call .)
    MORE            reduce using rule 33 (expression -> function_call .)
    LESS            reduce using rule 33 (expression -> function_call .)
    MOREEQ          reduce using rule 33 (expression -> function_call .)
    LESSEQ          reduce using rule 33 (expression -> function_call .)


state 15

    (16) declaration -> type . variants
    (17) declaration -> type . variants LASIGNMENT DECIMAL
    (75) declaration -> type . error
    (76) declaration -> type . variants LASIGNMENT error
    (55) function -> type . NAME LSQBRACKET parameters RSQBRACKET begin NEWLINE func_statements end
    (112) function -> type . error LSQBRACKET parameters RSQBRACKET begin NEWLINE func_statements end
    (113) function -> type . NAME LSQBRACKET error RSQBRACKET begin NEWLINE func_statements end
    (114) function -> type . NAME LSQBRACKET parameters RSQBRACKET error NEWLINE func_statements end
    (115) function -> type . NAME LSQBRACKET parameters RSQBRACKET begin NEWLINE func_statements error
    (116) function -> type . error LSQBRACKET error RSQBRACKET begin NEWLINE func_statements end
    (117) function -> type . NAME LSQBRACKET error RSQBRACKET error NEWLINE func_statements end
    (118) function -> type . NAME LSQBRACKET parameters RSQBRACKET error NEWLINE func_statements error
    (119) function -> type . error LSQBRACKET parameters RSQBRACKET begin NEWLINE func_statements error
    (120) function -> type . error LSQBRACKET parameters RSQBRACKET error NEWLINE func_statements end
    (121) function -> type . NAME LSQBRACKET error RSQBRACKET begin NEWLINE func_statements error
    (122) function -> type . error LSQBRACKET error RSQBRACKET error NEWLINE func_statements end
    (123) function -> type . NAME LSQBRACKET error RSQBRACKET error NEWLINE func_statements error
    (124) function -> type . error LSQBRACKET parameters RSQBRACKET error NEWLINE func_statements error
    (125) function -> type . error LSQBRACKET error RSQBRACKET begin NEWLINE func_statements error
    (20) variants -> . variants variant
    (21) variants -> . variant
    (22) variant -> . NAME

    error           shift and go to state 51
    NAME            shift and go to state 52

    variants                       shift and go to state 50
    variant                        shift and go to state 53

state 16

    (44) decimal_const -> DECIMAL .

    RASIGNMENT      reduce using rule 44 (decimal_const -> DECIMAL .)
    PLUS            reduce using rule 44 (decimal_const -> DECIMAL .)
    MINUS           reduce using rule 44 (decimal_const -> DECIMAL .)
    MULT            reduce using rule 44 (decimal_const -> DECIMAL .)
    DIV             reduce using rule 44 (decimal_const -> DECIMAL .)
    MORE            reduce using rule 44 (decimal_const -> DECIMAL .)
    LESS            reduce using rule 44 (decimal_const -> DECIMAL .)
    MOREEQ          reduce using rule 44 (decimal_const -> DECIMAL .)
    LESSEQ          reduce using rule 44 (decimal_const -> DECIMAL .)
    NEWLINE         reduce using rule 44 (decimal_const -> DECIMAL .)
    error           reduce using rule 44 (decimal_const -> DECIMAL .)
    LRNDBRACKET     reduce using rule 44 (decimal_const -> DECIMAL .)
    DECIMAL         reduce using rule 44 (decimal_const -> DECIMAL .)
    NAME            reduce using rule 44 (decimal_const -> DECIMAL .)
    do              reduce using rule 44 (decimal_const -> DECIMAL .)
    RSQBRACKET      reduce using rule 44 (decimal_const -> DECIMAL .)
    RRNDBRACKET     reduce using rule 44 (decimal_const -> DECIMAL .)


state 17

    (18) declaration -> field . type type variants
    (19) declaration -> field . type type variants LASIGNMENT DECIMAL
    (77) declaration -> field . type type error
    (78) declaration -> field . type type variants LASIGNMENT error
    (24) type -> . tiny
    (25) type -> . small
    (26) type -> . normal
    (27) type -> . big

    tiny            shift and go to state 28
    small           shift and go to state 29
    normal          shift and go to state 30
    big             shift and go to state 31

    type                           shift and go to state 54

state 18

    (86) assignment -> error . LASIGNMENT expression
    (87) assignment -> error . RASIGNMENT variant
    (89) assignment -> error . indices LASIGNMENT expression
    (91) assignment -> error . RASIGNMENT variant indices
    (93) assignment -> error . LASIGNMENT expression RASIGNMENT variant
    (96) assignment -> error . LASIGNMENT error RASIGNMENT variant
    (98) assignment -> error . LASIGNMENT expression RASIGNMENT error
    (99) assignment -> error . RASIGNMENT variant LASIGNMENT expression
    (102) assignment -> error . RASIGNMENT error LASIGNMENT expression
    (104) assignment -> error . RASIGNMENT variant LASIGNMENT error
    (23) indices -> . LSQBRACKET expression expression RSQBRACKET
    (80) indices -> . LSQBRACKET error RSQBRACKET
    (81) indices -> . LSQBRACKET error expression RSQBRACKET
    (82) indices -> . LSQBRACKET expression error RSQBRACKET
    (83) indices -> . LSQBRACKET error error RSQBRACKET
    (84) indices -> . indices error

    LASIGNMENT      shift and go to state 55
    RASIGNMENT      shift and go to state 56
    LSQBRACKET      shift and go to state 58

    indices                        shift and go to state 57

state 19

    (45) assignment -> variant . LASIGNMENT expression
    (47) assignment -> variant . indices LASIGNMENT expression
    (49) assignment -> variant . LASIGNMENT expression RASIGNMENT variant
    (85) assignment -> variant . LASIGNMENT error
    (90) assignment -> variant . indices LASIGNMENT error
    (94) assignment -> variant . LASIGNMENT error RASIGNMENT variant
    (95) assignment -> variant . LASIGNMENT expression RASIGNMENT error
    (97) assignment -> variant . LASIGNMENT error RASIGNMENT error
    (30) expression -> variant .
    (32) expression -> variant . LASIGNMENT expression
    (23) indices -> . LSQBRACKET expression expression RSQBRACKET
    (80) indices -> . LSQBRACKET error RSQBRACKET
    (81) indices -> . LSQBRACKET error expression RSQBRACKET
    (82) indices -> . LSQBRACKET expression error RSQBRACKET
    (83) indices -> . LSQBRACKET error error RSQBRACKET
    (84) indices -> . indices error

    LASIGNMENT      shift and go to state 59
    RASIGNMENT      reduce using rule 30 (expression -> variant .)
    PLUS            reduce using rule 30 (expression -> variant .)
    MINUS           reduce using rule 30 (expression -> variant .)
    MULT            reduce using rule 30 (expression -> variant .)
    DIV             reduce using rule 30 (expression -> variant .)
    MORE            reduce using rule 30 (expression -> variant .)
    LESS            reduce using rule 30 (expression -> variant .)
    MOREEQ          reduce using rule 30 (expression -> variant .)
    LESSEQ          reduce using rule 30 (expression -> variant .)
    LSQBRACKET      shift and go to state 58

    indices                        shift and go to state 60

state 20
